# general_mcp_tool

./: Plan.md  README.md  docker-compose.yml  embeddings.db  plik_losowy.txt  pogoda_cieszyn.txt  pogodynka.txt  pyproject.toml  random.md  random_1.md  test_embeddings.py  weather.txt
.devcontainer/: devcontainer.json
src/: main.py
src/agents/: planner_agent.py  solver_agent.py
src/database/: vector_store.py
src/prompts/: planner_prompt.txt  solver_prompt.txt
src/schemas/: step.py
src/tools/: embedding_db.py  embeddings.db  tool_discovery_service.py  tools.py
src/workflow/: workflow.py
